# ntfy-rs

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  SPEC.md  build.rs  deny.toml  docker-compose.yml  server.toml.example
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker.yml  release.yml
src/: auth.rs  config.rs  email.rs  emoji.rs  error.rs  lib.rs  main.rs  manager.rs  message.rs  router.rs  state.rs  topic.rs  upstream.rs  visitor.rs  webpush.rs
src/db/: attachments.rs  cache.rs  mod.rs  schema.rs  users.rs  webpush.rs
src/handlers/: account.rs  admin.rs  file.rs  health.rs  matrix.rs  metrics.rs  mod.rs  publish.rs  subscribe.rs  webpush.rs  ws.rs
tools/icon-gen/: Cargo.toml
tools/icon-gen/src/: main.rs
