[package]
name = "ntfy-rs"
version = "0.1.0"
edition = "2021"
description = "Lightweight pub/sub notification server"
license = "Apache-2.0 OR GPL-2.0"

[lib]
name = "ntfy_rs"
path = "src/lib.rs"

[[bin]]
name = "ntfy-rs"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# SQLite (statically linked — no system dep, no CGO equivalent)
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config: TOML file + env override
config = { version = "0.14", default-features = false, features = ["toml"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Rate limiting (token bucket)
governor = { version = "0.6", features = ["dashmap"] }

# Concurrent hash map (visitor + topic maps)
dashmap = "5"

# Password hashing
bcrypt = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
toml = "0.8"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
base64 = "0.22.1"
reqwest = { version = "0.13.3", features = ["json"] }
sha2 = "0.11.0"

# TLS
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rustls-pemfile = "2"

# Metrics (Prometheus exposition format)
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# Email notifications (outbound SMTP)
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "tokio1"] }

# Unix socket serving (hyper is already a transitive dep via axum)
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }

[profile.release]
opt-level = "z"      # optimise for size
lto = true           # link-time optimisation
codegen-units = 1    # single codegen unit for better dead-code elimination
strip = true         # strip symbols (equivalent to -s -w in Go)
panic = "abort"      # smaller binary; no unwinding tables

